<resources>
    <!--activity_main-->
    <string name="app_name">PlayScore</string>
    <string name="name_app">TRUCO UTFPR</string>
    <string name="game_in_progress">Game in Progress</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="edit_name">Edit name</string>
    <string name="points_text">POINTS</string>
    <string name="_1">+1</string>
    <string name="_3">+3</string>
    <string name="_6">+6</string>
    <string name="_9">+9</string>
    <string name="_12">+12</string>
    <string name="points_clear">Reset Scores</string>
    <string name="scoring_history">Scoring History</string>
    <string name="clear_score_history">Clear Score History</string>

    <!--MainActivity-->
    <string name="game_over">Game Over</string>
    <string name="winner_message">Player: %1$s wins!</string>
    <string name="restart">Restart</string>

    <!--activity_edit_name-->
    <string name="confirm">Start Game</string>
    <string name="configure_game">Game Setup</string>
    <string name="enter_names">Enter the names of the players or teams to start keeping score.</string>
    <string name="player_1_configure">Player 1</string>
    <string name="player_2_configure">Player 2</string>
    <string name="back">Back</string>

    <!--activity_score_history-->
    <string name="total_wins">Total Wins</string>
    <string name="clear_scoring_history">Clear Scoring History</string>
    <string name="history_wins">%1$d Wins</string>

    <!--Toasts-->
    <string name="clear_points">Clear Points</string>
    <string name="show_score_history">Show Score History</string>
    <string name="edit_player_name">Edit player name</string>
    <string name="undo">Undo</string>
</resources>