<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_score_history"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScoreHistoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titleApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/name_app"
            android:textColor="@color/app_text"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/ivBack"
            app:layout_constraintStart_toEndOf="@id/ivBack"
            app:layout_constraintTop_toTopOf="@id/ivBack" />

        <Button
            android:id="@+id/btClearHistory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/button_clear_history"
            android:text="@string/clear_scoring_history"
            android:textColor="@color/gold_text"
            app:layout_constraintEnd_toEndOf="@+id/cvPlayers"
            app:layout_constraintStart_toStartOf="@+id/cvPlayers"
            app:layout_constraintTop_toBottomOf="@+id/cvPlayers"
            app:strokeColor="@color/button_stroke"
            app:strokeWidth="1dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvPlayers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="112dp"
            android:backgroundTint="@color/card_tint"
            android:padding="16dp"
            app:cardCornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/ivBack"
            app:layout_constraintTop_toBottomOf="@id/titleApp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constrainLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="24dp">

                <ImageView
                    android:id="@+id/ivWinner"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_winner"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvTotalWin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/total_wins"
                    android:textSize="22sp"
                    app:layout_constraintBottom_toBottomOf="@id/ivWinner"
                    app:layout_constraintStart_toEndOf="@id/ivWinner"
                    app:layout_constraintTop_toTopOf="@id/ivWinner" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvPlayerOne"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/ivWinner"
                    app:layout_constraintTop_toBottomOf="@id/tvTotalWin">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:orientation="horizontal"
                        android:padding="12dp">

                        <TextView
                            android:id="@+id/etPlayerOne"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:text="@string/player_1" />

                        <TextView
                            android:id="@+id/etVictoriesOne"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="12dp"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:text="@string/history_wins"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:layout_constraintEnd_toEndOf="@+id/cvPlayerOne"
                    app:layout_constraintStart_toStartOf="@+id/cvPlayerOne"
                    app:layout_constraintTop_toBottomOf="@id/cvPlayerOne">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:orientation="horizontal"
                        android:padding="12dp">

                        <TextView
                            android:id="@+id/etPlayerTwo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:text="@string/player_2" />

                        <TextView
                            android:id="@+id/etVictoriesTwo"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="12dp"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:text="@string/history_wins"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>